<resources>
    <string name="app_name">InputMarketplace</string>
    <string name="title_product_list">Product List</string>
    <string name="msg_please_Wait">Please wait</string>
    <string name="label_seller">Seller : </string>
    <string name="str_currency_code">&#8377;&#160;</string>
    <string name="str_currency_code_amount">&#8377;&#160;2000</string>
    <string name="nav_title_log_in">Log In/Sign Up</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_terms_of_services">Terms of Use</string>
    <string name="nav_title_privacy_policy">Privacy Policy</string>
    <string name="nav_title_about_us">About Us</string>
    <string name="nav_title_contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_my_cart">My Cart</string>
    <string name="label_total">Total : </string>
    <string name="btn_place_order">Place Order</string>
    <string name="str_ten_digit_mobile_number">Please enter your 10 digit Mobile Number</string>
    <string name="str_accept_terms">I accept Terms of Use and Privacy Policy</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="str_enter_otp">Please enter OTP within 180 seconds</string>
    <string name="btn_verify_otp">Verify OTP</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="mandatory_mark">*</string>
    <string name="label_first_name">First Name</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_address">Address</string>
    <string name="label_confirm_delivery_address">Confirm Delivery Address</string>
    <string name="label_current_location">Current Location</string>
    <string name="label_area_locality">Area/Locality</string>
    <string name="label_address_instruction">Address Instructions</string>
    <string name="label_area">Area</string>
    <string name="label_state">State</string>
    <string name="label_city">City</string>
    <string name="label_pincode">Pincode</string>
    <string name="label_email">Email</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tip_address2">Please enter the required address information such as Bungalow Name, Society Name, Colony Name,etc.</string>
    <string name="tip_address1">Please enter the required address information such as  Survey No.,Plot No., Building No., Flat No., etc.</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="btn_save">Save</string>
    <string name="title_order_history">Order History</string>
    <string name="label_login_signup">Login/Sign Up</string>
    <string name="label_order_number">Order No. :</string>
    <string name="label_order_date">Order Date :</string>
    <string name="label_amount">Amount :</string>
    <string name="title_order_details">Order Details</string>

    <string name="msg_internet_connection">No Internet connection available, please check your connection.</string>
    <string name="msg_enable_location">Please enable device location!</string>
    <string name="msg_no_internet">Your device is not connected to internet.</string>
    <string name="msg_auth_failed">Authentication failed.</string>
    <string name="msg_server_error">Server is not responding, please try again later.</string>
    <string name="msg_timeout_error">Connection timeout, please try again later.</string>
    <string name="msg_api_error">Unable to process your request, please try again later.</string>
    <string name="msg_error">Something went wrong, please contact Agreeta Administrator</string>
    <!--    <string name="hint_product_search">Search by Name/Molecule/Company/Brand</string>-->
    <string name="hint_product_search">Search by Name/Company</string>
    <string name="btn_send_error_report">Send Error Report</string>
    <string name="btn_add">ADD</string>
    <string name="msg_no_items_in_cart">Your cart is empty</string>
    <string name="msg_remove_item_from_cart">Are you sure you want to remove this item from your cart?</string>
    <string name="btn_remove">Remove</string>
    <string name="title_remove_item">Remove Item</string>
    <string name="msg_parse_json">Unable to proceed your request. Please try again later</string>
    <string name="str_location_permission_title">Location Permission</string>
    <string name="str_location_permission_msg">Please grant location permission to get weather forcast details</string>
    <string name="btn_allow">Allow</string>
    <string name="title_gps">tiltle_gps</string>
    <string name="msg_gps">msg_gps</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="msg_accept_terms">Please accept the terms and policies</string>
    <string name="msg_first_name">Enter first name</string>
    <string name="msg_last_name">Enter last name</string>
    <string name="msg_address">Enter address details</string>
    <string name="msg_state">Enter state</string>
    <string name="msg_city">Enter city</string>
    <string name="msg_pincode">Enter pincode</string>
    <string name="btn_continue">Continue</string>

    <string name="str_input_text_number">ABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890abcdefghijklmnopqrstuvwxyz, _-@*$#&amp;!/\().01234567890\'\"</string>
    <string name="str_input_text_email_user">ABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890abcdefghijklmnopqrstuvwxyz _$#&amp;!/\().01234567890@</string>
    <string name="str_input_text_address">ABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890abcdefghijklmnopqrstuvwxyz, _-$#&amp;!/\()./-\'\"</string>
    <string name="str_input_text_outlet_name">ABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890abcdefghijklmnopqrstuvwxyz, _-$#&amp;!/\().\'\"</string>
    <string name="str_input_number_caps">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="str_input_name">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghij klmnopqrstuvwxyz </string>
    <string name="str_input_search_product">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvw xyz0123456789</string>
    <string name="label_quantity">Quantity :</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
