<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/dp12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp15"
        android:background="@drawable/bg_dialog_border">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_label_mobi_no"
            style="@style/regular_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/str_ten_digit_mobile_number" />

        <EditText
            android:id="@+id/et_mobile_number"
            style="@style/regular_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/bg_edt_selector"
            android:inputType="number"
            android:maxLength="10"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_label_mobi_no"
            android:paddingTop="@dimen/dp8"
            android:paddingRight="@dimen/dp5"
            android:paddingBottom="@dimen/dp8"
            android:text="8567878677" />
        </RelativeLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/str_accept_terms"
            android:textColor="@color/hyperlink_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_weight="1"
                android:background="@drawable/bg_green_rounded_border"
                android:fontFamily="@font/opensans_semibold"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/sp14" />

            <Button
                android:id="@+id/btn_send_otp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/opensans_semibold"
                android:paddingLeft="@dimen/dp15"
                android:paddingRight="@dimen/dp15"
                android:text="@string/btn_send_otp"
                android:textAllCaps="false"
                android:textColor="@color/marketplace_white"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>