<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
       <!-- <variable
            name="cartItem"
            type="com.agreeta.inputmarketplace.data.model.ModelProductList" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/marketplace_white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginTop="@dimen/dp15"
            android:layout_marginRight="@dimen/dp5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rl_bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_empty_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_empty_cart"
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp80"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_empty_cart" />

            <TextView
                android:id="@+id/tv_no_item_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_empty_cart"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:text="@string/msg_no_items_in_cart"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/marketplace_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp3"
                android:background="@color/my_cart_page_divider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/iv_label_title"
                style="@style/bold_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp15"
                android:text="@string/label_total" />

            <TextView
                android:id="@+id/tv_total_amount"
                style="@style/regular_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp2"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp15"
                android:layout_toRightOf="@+id/iv_label_title"
                android:text=""
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_place_order"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp35"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp15"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/opensans_semibold"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:gravity="center"
                android:textSize="@dimen/sp17"
                android:text="@string/btn_place_order"
                android:textAllCaps="false"
                android:textColor="@color/marketplace_white" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>